feat: Batch approval